[package]
name = "standup"
version = "0.1.0"
edition = "2024"
authors = ["Dein Name <dein@email.com>"]
description = "CLI Tool für tägliche Standups mit Git und Ratatui"
license = "MIT"
repository = "https://github.com/deinname/standup"

[dependencies]
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = "0.27"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
