[package]
name = "whathaveidone"
version = "0.5.0"
edition = "2024"
authors = ["Your Name <your@email.com>"]
description = "CLI tool for daily standups with Git and Ratatui"
license = "MIT"
repository = "https://github.com/heroheman/whathaveidone"
readme = "readme.md"

[[bin]]
name = "whathaveidone"
path = "src/main.rs"

[[bin]]
name = "whid"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.28.1", features = ["all-widgets"] }
crossterm = "0.27"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
gemini-rs = "=2.0.0"
arboard = "3.2"
regex = "1.11.1"
tui-scrollview = "0.5.1"
once_cell = "1.21.3"
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
dirs = "5.0.1"
toml = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
